# EDyA-FINAL

./: CMakeLists.txt  Pruebas.c  README.md  interpretar.out  makefile  pruebaArboles.out
AVL/: avl.c  avl.h  makefile
Arboles/: ITree1.c  ITree1.h  makefile  pruebaArboles.c
Arboles/Cola/: cola.c
Arboles/Intervalos/: intervaloE.c  intervaloE.h
Conjuntos/: conjuntos.c  conjuntos.h  makefile
Hash/: makefile  tablahash.c  tablahash.h
HashAVL/: hashavl.c  hashavl.h  makefile
Informe/: Informe.tex
Interprete/: Interprete.c  Interpretoski.c  interpretar.c  interprete.c  interprete.h  makefile
Interprete/Arboles/: ITree1.c  ITree1.h  makefile  pruebaArboles.c
Interprete/Arboles/Cola/: makefile
Interprete/Arboles/Intervalos/: intervaloE.c  intervaloE.h  makefile
Interprete/Arboles/Pila/: makefile
Intervalos/: intervaloE.c  intervaloE.h  makefile
Listas/: hlist.c  hlist.h  makefile
Proyecto/: makefile
Proyecto/ArrayI/: intervaloE.c
Proyecto/ITree/: ITree.c  ITree.h  makefile
Proyecto/ITree/Cola/: cola.h
Proyecto/ITree/Intervalos/: intervalos.c  intervalos.h  makefile
Proyecto/ITree/Pila/: pila.h
Proyecto/Interprete/: interprete.c  interprete.h
Proyecto/Interprete/Arboles/: ITree.c  makefile
Proyecto/Interprete/Arboles/Cola/: makefile
Proyecto/Interprete/Arboles/Intervalos/: intervaloE.h  makefile
Proyecto/Interprete/Arboles/Pila/: makefile  pila.c
Proyecto/Interprete/ArrayI/: arrayI.c  arrayI.h  busquedaBT.out  busquedaBinariaTest.c  intervaloE.h  makefile
